--- a/accessclass.html
+++ b/accessclass.html
@@ -25,7 +25,7 @@
         <a href="#">FAQ</a>
         <a href="#">Courses</a>
         <a href="about-us.html">How it works</a>
-        <a href="class.html">Create Class</a>
+        <a href="create_class.php">Create Class</a>
         <a href="#">Home</a>
   </div>
   </div>  
