--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
    		</p>
    	<div>
    		<p>
-   			<h2><a href="signup.php">Teacher</a>
-        <a href="#">Student</a></h2>
+   			<h2><a href="teacher_signup.php">Teacher</a>
+        <a href="student_signup.php">Student</a></h2>
    		</p>
    	</div>
    	<div>
